--- a/ee-default/execution-environment.yml
+++ b/ee-default/execution-environment.yml
@@ -37,12 +37,14 @@ dependencies:
         version: "1.9.0"
       - name: ansible.utils
         version: "2.9.0"
+      - name: chocolatey.chocolatey
+        version: "1.4.0"
       - name: community.windows
         version: "1.9.0"
       - name: community.general
         version: "8.1.0"
-      - name: chocolatey.chocolatey
-        version: "1.4.0"
+      - name: containers.podman
+        version: "1.11.0"
       - name: infra.ah_configuration
         version: "2.0.4"
       - name: infra.controller_configuration
