--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,23 +1,31 @@
-image: quay.io/zleblanc/bitbucket-builder:v6
+image: python
 
 pipelines:
-  custom:
-    build-ee:
-      - variables:
-          - name: EE_FOLDER
-      - stage:
-          name: Execution Environment Build
-          deployment: master
-          steps:
-            - step:
-                name: Build the execution environment
-                script:
-                  - pip install -r $BITBUCKET_CLONE_DIR/requirements.workflow.txt
-                  - podman login quay.io -u "$QUAY_USERNAME" -p "$QUAY_PASSWORD"
-                  - podman login registry.redhat.io -u "$RH_USERNAME" -p "$RH_PASSWORD"
-                  - sed -i "s/rh_ah_token/$AH_TOKEN/1" ansible.cfg
-                  - cd $BITBUCKET_CLONE_DIR/$EE_FOLDER
-                  - ls -al
-                  - ansible-builder build --tag=quay.io/zleblanc/$EE_FOLDER:latest --tag=quay.io/zleblanc/$EE_FOLDER:$BITBUCKET_COMMIT
-                  - podman push quay.io/zleblanc/$EE_FOLDER:$BITBUCKET_COMMIT
-                  - podman push quay.io/zleblanc/$EE_FOLDER:latest
+  default:
+    deployment: master
+    steps:
+      - step: 
+          name:
+          script:
+            - python -m pip install jmespath
+            - python bitbucket-trigger-ansible.py
+  # custom:
+  #   build-ee:
+  #     - variables:
+  #         - name: EE_FOLDER
+  #     - stage:
+  #         name: Execution Environment Build
+  #         deployment: master
+  #         steps:
+  #           - step:
+  #               name: Build the execution environment
+  #               script:
+  #                 - pip install -r $BITBUCKET_CLONE_DIR/requirements.workflow.txt
+  #                 - podman login quay.io -u "$QUAY_USERNAME" -p "$QUAY_PASSWORD"
+  #                 - podman login registry.redhat.io -u "$RH_USERNAME" -p "$RH_PASSWORD"
+  #                 - sed -i "s/rh_ah_token/$AH_TOKEN/1" ansible.cfg
+  #                 - cd $BITBUCKET_CLONE_DIR/$EE_FOLDER
+  #                 - ls -al
+  #                 - ansible-builder build --tag=quay.io/zleblanc/$EE_FOLDER:latest --tag=quay.io/zleblanc/$EE_FOLDER:$BITBUCKET_COMMIT
+  #                 - podman push quay.io/zleblanc/$EE_FOLDER:$BITBUCKET_COMMIT
+  #                 - podman push quay.io/zleblanc/$EE_FOLDER:latest
