--- a/ee-vmware/execution-environment.yml
+++ b/ee-vmware/execution-environment.yml
@@ -17,6 +17,8 @@ dependencies:
         version: "4.2.0"
       - name: vmware.vmware_rest
         version: "3.0.0"
+      - name: infoblox.nios_modules
+        version: "1.6.1"
 
 images:
   base_image:
