--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,9 +68,10 @@ jobs:
       - name: substitute token for automation hub
         id: ah-token
         run: |
-          sed -i "s/rh_ah_token/$AH_TOKEN/1" ansible.cfg
-          sed -i "s/pah_token/$PAH_TOKEN/1" ansible.cfg
-          cp ansible.cfg ${{ inputs.EE_FOLDER_NAME }}/ansible.cfg
+          mkdir -p ${{ inputs.EE_FOLDER_NAME }}/files
+          cp ansible.cfg ${{ inputs.EE_FOLDER_NAME }}/files/ansible.cfg
+          sed -i "s/rh_ah_token/$AH_TOKEN/1" ${{ inputs.EE_FOLDER_NAME }}/files/ansible.cfg
+          sed -i "s/pah_token/$PAH_TOKEN/1" ${{ inputs.EE_FOLDER_NAME }}/files/ansible.cfg
         env:
           AH_TOKEN: ${{ secrets.AH_TOKEN }}
           PAH_TOKEN: ${{ secrets.PAH_TOKEN }}
