--- a/ee-default/execution-environment.yml
+++ b/ee-default/execution-environment.yml
@@ -7,7 +7,7 @@ options:
 
 images:
   base_image:
-    name: registry.redhat.io/ansible-automation-platform-24/ee-minimal-rhel8:latest
+    name: registry.redhat.io/ansible-automation-platform-24/ee-supported-rhel8:latest
 
 dependencies:
   system:
@@ -56,3 +56,11 @@ dependencies:
         version: "2.3.0"
       - name: servicenow.itsm
         version: "2.1.0"
+
+additional_build_files:
+  - src: files
+    dest: configs
+
+additional_build_steps:
+  prepend_galaxy:
+    - COPY _build/configs/ansible.cfg /etc/ansible/ansible.cfg
