--- a/ee-default/execution-environment.yml
+++ b/ee-default/execution-environment.yml
@@ -10,52 +10,65 @@ images:
     name: registry.redhat.io/ansible-automation-platform-24/ee-supported-rhel8:latest
 
 dependencies:
-  system:
-    - curl
-    - git
-  python:
-    - requests
-    - passlib
-    - lxml
-    - xmltodict
-    - jmespath
-    - packaging
-    - botocore
-    - boto3
-  galaxy:
-    collections:
-      - name: awx.awx
-        version: "22.7.0"
-      - name: amazon.aws
-        version: "7.2.0"
-      - name: ansible.controller
-        version: "4.5.0"
-      - name: theforeman.foreman
-        version: "3.14.0"
-      - name: azure.azcollection
-        version: "1.15.0"
-      - name: ansible.windows
-        version: "1.9.0"
-      - name: ansible.utils
-        version: "2.9.0"
-      - name: chocolatey.chocolatey
-        version: "1.4.0"
-      - name: community.windows
-        version: "1.9.0"
-      - name: community.general
-        version: "8.1.0"
-      - name: containers.podman
-        version: "1.11.0"
-      - name: infra.ah_configuration
-        version: "2.0.4"
-      - name: infra.controller_configuration
-        version: "2.6.0"
-      - name: infra.ee_utilities
-        version: "3.1.3"
-      - name: infra.osbuild
-        version: "2.3.0"
-      - name: servicenow.itsm
-        version: "2.1.0"
+      system:
+        - curl
+        - git
+      python:
+        - requests
+        - passlib
+        - lxml
+        - xmltodict
+        - jmespath
+        - packaging
+        - botocore
+        - boto3
+      galaxy:
+        collections:
+          - name: awx.awx
+            version: "22.7.0"
+          - name: amazon.aws
+            version: "7.2.0"
+          - name: ansible.controller
+            version: "4.5.0"
+          - name: ansible.scm
+            version: "2.0.0"
+          - name: ansible.utils
+            version: "3.1.0"
+          - name: ansible.windows
+            version: "1.9.0"
+          - name: azure.azcollection
+            version: "1.15.0"
+          - name: chocolatey.chocolatey
+            version: "1.4.0"
+          - name: community.general
+            version: "8.1.0"
+          - name: community.vmware
+            version: "4.2.0"
+          - name: community.windows
+            version: "1.9.0"
+          - name: containers.podman
+            version: "1.11.0"
+          # - name: infra.aap_utilities
+          #   version: "2.3.0"
+          - name: infra.ah_configuration
+            version: "2.0.4"
+          - name: infra.controller_configuration
+            version: "2.6.0"
+          - name: infra.ee_utilities
+            version: "3.1.3"
+          - name: infra.osbuild
+            version: "2.3.0"
+          # - name: redhat.openshift
+          #   version: "3.0.1"
+          # - name: redhat.openshift_virtualization
+          #   version: "1.2.2"
+          - name: servicenow.itsm
+            version: "2.4.0"
+          - name: theforeman.foreman
+            version: "3.14.0"
+          - name: vmware.vmware_rest
+            version: "3.0.0"
+
 
 additional_build_files:
   - src: files
