--- a/ee-windows/files/krb5.conf
+++ b/ee-windows/files/krb5.conf
@@ -17,15 +17,15 @@ includedir /etc/krb5.conf.d/
     spake_preauth_groups = edwards25519
     dns_canonicalize_hostname = fallback
     qualify_shortname = ""
-    default_realm = AUTODOTES.LOCAL 
+    default_realm = AUTODOTES.COM 
     default_ccache_name = KEYRING:persistent:%{uid}
 
 [realms]
- AUTODOTES.LOCAL = {
-     kdc = dc01.AUTODOTES.LOCAL
-     admin_server = dc01.AUTODOTES.LOCAL
+ AUTODOTES.COM = {
+     kdc = dc01.AUTODOTES.COM
+     admin_server = dc01.AUTODOTES.COM
  }
 
 [domain_realm]
- .autodotes.local = AUTODOTES.LOCAL 
- autodotes.local = AUTODOTES.LOCAL
+ .autodotes.com = AUTODOTES.COM 
+ autodotes.com = AUTODOTES.COM
