--- a/ee-default/execution-environment.yml
+++ b/ee-default/execution-environment.yml
@@ -14,6 +14,7 @@ dependencies:
         - curl
         - git
       python:
+        - aiohttp
         - requests
         - passlib
         - lxml
