--- a/ee-windows/execution-environment.yml
+++ b/ee-windows/execution-environment.yml
@@ -42,6 +42,8 @@ additional_build_files:
     dest: configs
 
 additional_build_steps:
+  prepend_galaxy:
+    - COPY _build/configs/ansible.cfg /etc/ansible/ansible.cfg
   prepend_final: 
     - COPY _build/configs/krb5.conf /etc/krb5.conf
   append_final:
