--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,4 +7,4 @@ auth_url=https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-conn
 token=rh_ah_token
 
 [galaxy_server.release_galaxy]
-url=https://old-galaxy.ansible.com/
+url=https://galaxy.ansible.com/
